feat(auth): Add auth user endpoint
