# src/app.ts
@@ -1,7 +1,7 @@
 import express from 'express'
 import swaggerUi from 'swagger-ui-express'
 import swaggerFile from './swagger.json'
-import { parcoursController } from './controller'
+import { authController, parcoursController } from './controller'
 
 const app = express()
 app.use(express.json())
@@ -11,6 +11,9 @@ app.use(express.json())
 app.use('/doc', swaggerUi.serve, swaggerUi.setup(swaggerFile))
 app.use('/parcours', parcoursController
   // #swagger.tags = ['Parcours']
+)
+app.use('/auth', authController
+  // #swagger.tags = ['Auth']
 )
 
 export default app
